--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -46,6 +46,7 @@ John P. Huelsenbeck
 \chapter{Basic Introcution}
 \include{RB_Basics_Tutorial/RB_Basics_Tutorial_content}
 
+
 \chapter{Continuous Time Markov Model for Discrete Character Evolution}
 \include{RB_CTMC_Tutorial/RB_CTMC_Tutorial_content}
 
@@ -69,8 +70,8 @@ John P. Huelsenbeck
 \chapter{Gene tree - Species tree estimation}
 \include{RB_GTST_Tutorial/RB_GTST_Tutorial_content}
 
-
-\chapter{Biogeography}
+\part{Biogeography}
+\chapter{Many Area DEC}
 \include{RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_content}
 
 
