Working on the tutorials: Finished a new version of the CTMC tutorial.

--- a/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.tex
+++ b/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.tex
@@ -14,6 +14,8 @@
 \textbf{\it{\Large Basic introduction to Rev \& MCMC}}\\\vspace{2mm}
 \end{center}
 
+\def \ResourcePath {./}
+\def \GlobalResourcePath {../}
 \input{RB_Basics_Tutorial_content}
 
 Version dated: \today
