--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -43,14 +43,23 @@ John P. Huelsenbeck
 
 \tableofcontents
 
-\chapter{Basic Introcution}
+\def \GlobalResourcePath {./}
+
+\part{Getting Started with RevBayes}
+\chapter{Introcution}
+\def \ResourcePath {RB_Getting_Started/}
+\include{RB_Getting_Started/RB_Getting_Started_content}
+\chapter{Basic Commands}
+\def \ResourcePath {RB_Basics_Tutorial/}
 \include{RB_Basics_Tutorial/RB_Basics_Tutorial_content}
 
 
+\part{Models of Molecular Evolution}
 \chapter{Continuous Time Markov Model for Discrete Character Evolution}
+\def \ResourcePath {RB_CTMC_Tutorial/}
 \include{RB_CTMC_Tutorial/RB_CTMC_Tutorial_content}
 
-
+\part{Inference}
 \chapter{Markov chain Monte Carlo Algorithms}
 \include{RB_MCMC_Tutorial/RB_MCMC_Tutorial_content}
 
@@ -58,15 +67,16 @@ John P. Huelsenbeck
 \chapter{Model Selection and Bayes Factors}
 \include{RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content}
 
-
+\part{Dating}
 \chapter{Dating and Relaxed Clocks}
 \include{RB_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content}
 
-
+\part{Diversification Rate Estimation}
 \chapter{Simple Diversification Rate Estimation}
 \include{RB_SimpleDiversification_Tutorial/RB_SimpleDiversification_Tutorial_content}
 
 
+\part{Gene tree - Species tree estimation}
 \chapter{Gene tree - Species tree estimation}
 \include{RB_GTST_Tutorial/RB_GTST_Tutorial_content}
 
@@ -75,6 +85,7 @@ John P. Huelsenbeck
 \include{RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_content}
 
 
+\part{Phylogenetic Comparative Method}
 \chapter{Phylogenetic Comparative Analyses: Continuous Trait Evolution}
 \include{RB_PhyloComparative_Tutorial/RB_PhyloComparative_Tutorial_content}
 
