--- a/tutorial_TeX/RB_Read_Data_Tutorial/RB_Read_Data_Tutorial.tex
+++ b/tutorial_TeX/RB_Read_Data_Tutorial/RB_Read_Data_Tutorial.tex
@@ -5,18 +5,18 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Substitution Models}}
+\rhead{\textsc {\RevBayes~Tutorial --- Reading and Manipulating Data}}
 
 \thispagestyle{plain}
 \begin{center}
 
-\textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Substitution Models}}\\\vspace{2mm}
+\textbf{\LARGE Data Formats in RevBayes}\\\vspace{2mm}
+\textbf{\it{\Large Reading, Manipulating and Writing Data}}\\\vspace{2mm}
 \end{center}
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_CTMC_Tutorial_content}
+\input{RB_Read_Data_Tutorial_content}
 
 Version dated: \today
 
