--- a/tutorial_TeX/RB_Getting_Started/RB_Getting_Started.tex
+++ b/tutorial_TeX/RB_Getting_Started/RB_Getting_Started.tex
@@ -5,20 +5,21 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Substitution Models}}
+\rhead{\textsc {\RevBayes~Tutorial --- Getting Started}}
 
 \thispagestyle{plain}
 \begin{center}
 
-\textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Substitution Models}}\\\vspace{2mm}
+\textbf{\LARGE Statistical Inference using \RevBayes}\\\vspace{2mm}
+\textbf{\it{\Large Getting Started with \RevBayes}}\\\vspace{2mm}
 \end{center}
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_CTMC_Tutorial_content}
+\input{RB_Getting_Started_content}
 
 Version dated: \today
+
 
 
 \end{document}
